# Sim_Fisicas_PLTC

Contactos/: CMakeLists.txt  Cont.cpp  main.cpp  ref.h
Poligonos/: CMakeLists.txt  README.md  main.cpp
SFLM/: CMakeLists.txt  main.cpp
holaBala/: CMakeLists.txt  README.md  main.cpp
holaJupiter/: CMakeLists.txt  README.md  main.cpp
holaLuna/: CMakeLists.txt  README.md  main.cpp
holaMundo/: CMakeLists.txt  README.md  main.cpp
joins/: CMakeLists.txt  Dist.cpp  Prismatic.cpp  Revolute.cpp  gear.cpp  main.cpp  ref.h
rube_goldberg/: CMakeLists.txt  Figures.h  Joins.h  main.cpp  ref.h
